# windows-samples-rs

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: build.yml
com_uri/: Cargo.toml
com_uri/bindings/: Cargo.toml
com_uri/src/: main.rs
core_app/: Cargo.toml  register.cmd
core_app/bindings/: Cargo.toml
core_app/src/: main.rs
create_window/: Cargo.toml
create_window/bindings/: Cargo.toml  build.rs
create_window/bindings/src/: lib.rs
create_window/src/: main.rs
create_window_sys/: Cargo.toml
create_window_sys/src/: main.rs
dia/: Cargo.toml  build.rs
dia/.metadata/: dia.manual.cs  generate.proj  main.cpp  options.rsp
dia/.windows/arm64/: msdia140.lib
dia/.windows/winmd/: Microsoft.Dia.winmd
dia/.windows/x64/: msdia140.lib
dia/.windows/x86/: msdia140.lib
dia/src/: main.rs
direct2d/: Cargo.toml  readme.md
direct2d/bindings/: Cargo.toml  build.rs
direct2d/bindings/src/: lib.rs
direct2d/src/: main.rs
direct3d12/: Cargo.toml
direct3d12/bindings/: Cargo.toml
direct3d12/src/: main.rs
enum_windows/: Cargo.toml
enum_windows/bindings/: Cargo.toml
enum_windows/src/: main.rs
enum_windows_sys/: Cargo.toml
enum_windows_sys/src/: main.rs
kernel_event/: Cargo.toml
kernel_event/bindings/: Cargo.toml
kernel_event/src/: main.rs
memory_buffer/: Cargo.toml
memory_buffer/bindings/: Cargo.toml
memory_buffer/src/: main.rs
message_box/: Cargo.toml
message_box/bindings/: Cargo.toml
ocr/: Cargo.toml
ocr/bindings/: Cargo.toml
ocr/src/: main.rs
overlapped/: Cargo.toml
overlapped/bindings/: Cargo.toml
overlapped/src/: main.rs
rss/: Cargo.toml
rss/bindings/: Cargo.toml
rss/src/: main.rs
simple/: Cargo.toml
simple/src/: main.rs
spellchecker/: Cargo.toml
spellchecker/bindings/: Cargo.toml  build.rs
spellchecker/src/: main.rs
uiautomation/: Cargo.toml  readme.md
uiautomation/bindings/: Cargo.toml  build.rs
uiautomation/src/: main.rs
webview2/: Cargo.toml
webview2/bindings/: Cargo.toml  build.rs
webview2/src/: main.rs
webview2_win32/: Cargo.toml  readme.md
webview2_win32/.windows/winmd/: Microsoft.Web.WebView2.winmd
webview2_win32/bindings/: Cargo.toml  build.rs
webview2_win32/callback-macros/: Cargo.toml
webview2_win32/callback-macros/src/: lib.rs
webview2_win32/src/: callback.rs  main.rs  pwstr.rs
win2d/: Cargo.toml
win2d/bindings/: Cargo.toml  build.rs
windows_app_sdk/: Cargo.toml  README.md  build.rs
windows_app_sdk/bindings/: Cargo.toml
windows_app_sdk/simple_window/: Cargo.toml
windows_app_sdk/simple_window/bindings/: Cargo.toml  build.rs
windows_app_sdk/simple_window/src/: main.rs
windows_app_sdk/skeleton/: Cargo.toml
windows_app_sdk/skeleton/bindings/: Cargo.toml  build.rs
windows_app_sdk/skeleton/src/: main.rs
xaml_app/: Cargo.toml
xaml_app/bindings/: Cargo.toml  build.rs
xaml_app/src/: main.rs
xaml_island/: Cargo.toml
xaml_island/bindings/: Cargo.toml  build.rs
xaml_island/src/: main.rs
xml/: Cargo.toml
xml/bindings/: Cargo.toml
xml/src/: main.rs
