[package]
name = "sample"
version = "0.0.0"
edition = "2018"

[build-dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "build"
]

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "std",
    "alloc",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_Foundation"
]
