[package]
name = "sample"
version = "0.0.0"
edition = "2018"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
]
