[package]
name = "sample"
version = "0.0.0"
edition = "2018"

[dependencies]
array-init = "2.0.0"

[dependencies.windows]
version = "0.24"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_OleAutomation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
