[package]
name = "sample"
version = "0.0.0"
edition = "2018"

[dependencies]
array-init = "2.0.0"

[dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
