[package]
name = "sample"
version = "0.0.0"
edition = "2018"

[dependencies.windows]
version = "0.30"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
bindings = { path = "bindings" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
