[package]
name = "bindings"
version = "0.0.0"
edition = "2018"

[dependencies.windows]
path = "/git/windows-rs"
features = [
    "ApplicationModel_DataTransfer",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Storage_Streams",
    "UI_Core",
]

[build-dependencies]
windows = { path = "/git/windows-rs", features = ["build"] }

[features]
default = ["std", "alloc"]
std = []
alloc = []
