[package]
name = "bindings"
version = "0.0.0"
edition = "2018"

[dependencies.windows]
version = "0.30"
features = [
    "ApplicationModel_DataTransfer",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Storage_Streams",
    "UI_Core",
]

[build-dependencies]
windows = { version = "0.30", features = ["build"] }

[features]
default = ["std", "alloc"]
std = []
alloc = []
